--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -67,6 +67,7 @@ table {
 }
 
 .breadcrumb {
+  li { height: $baseLineHeight; }
   i { font-size: 12px; }
 }
 
